fix size navbar on iphone

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -76,5 +76,6 @@ $navbar-item-hover-color:   $primary;
 $navbar-dropdown-arrow:     $primary;
 $navbar-burger-color:       $primary;
 $navbar-dropdown-z:         50;
+$navbar-divider-height: 1px;
 
 @import '~bulma/sass/utilities/_all';
